# rag-copilot-app

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  streamlit_app.py
src/rag_copilot_app/: cli.py  config.py  ingest.py  loaders.py  ollama_utils.py  rag_chain.py  splitter.py
tests/: test_loaders.py  test_rag_chain.py  test_splitter.py
