[project]
name = "rag-copilot-app"
version = "0.1.0"
description = "Chat with any codebase, fully local: Ollama + Chroma + LangChain + Streamlit"
readme = "README.md"
authors = [
    { name = "TK", email = "tejuskavishwar78@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.5.0",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.60.0",
    "torchvision>=0.28.0",
    "tqdm>=4.69.0",
    "typer>=0.27.0",
]

[project.scripts]
rag-copilot = "rag_copilot_app.cli:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
